# zero2prod

./: Cargo.toml  README.md
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  routes.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_checks.rs
