[package]
name = "zero2prod"
version = "0.1.0"
authors = ["James Hagans <jameshagans@gravysolutions.io>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3"
tokio = { version = "0.3", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.10.8", features = ["json"]}