[package]
name = "zero2prod"
version = "0.1.0"
authors = ["James Hagans <jameshagans@gravysolutions.io>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3"
tokio = { version = "0.2", features = ["full"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
config = "0.10.1"

[dev-dependencies]
reqwest = { version = "0.10.8", features = ["json"]}

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = [ "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
